--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -61,7 +61,7 @@
           <li>Beat the competition on TripAdvisor</li>
         </ul>
       </div>
-      <form id="form2">
+      <form id="form1">
         <div class="row collapse">
           <div class="small-3 large-2 columns">
             <span id="modal-label" class="prefix">Name</span>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <a onClick="prepInfo1()" href="#" class="button expand close-reveal-modal" id="modal-submit">Request Demo</a>
-        <a class="close-reveal-modal">&#215;</a>
+        <a class="close-reveal-modal" id="close1">&#215;</a>
       </form>
     </div>
     <div id="product"></div>
@@ -166,7 +166,7 @@
           </div>
         </div>
         <a onClick="prepInfo2()" href="#" class="button expand close-reveal-modal" id="modal-submit">Request Demo</a>
-        <a class="close-reveal-modal">&#215;</a>
+        <a class="close-reveal-modal" id="close2">&#215;</a>
       </form>
     </div>
   </div>
@@ -250,166 +250,186 @@
       });
 
       // nav scroll fadein/fadeout 
-$(document).scroll(function(){
-    var y = $(this).scrollTop();
+    $(document).scroll(function(){
+        var y = $(this).scrollTop();
 
-    if (y > 10) {
-      $('nav').addClass("scrolled");
-    } else {
-      $('nav').removeClass("scrolled");
-    }
+        if (y > 10) {
+          $('nav').addClass("scrolled");
+        } else {
+          $('nav').removeClass("scrolled");
+        }
 
-});
+    });
 
 // hero, product images, and product feature animations
-$(document).ready(function(){
-  $('#hero-header').animate({'opacity':'1', 'margin-top':'150px'}, 700);
+    $(document).ready(function(){
+      $('#hero-header').animate({'opacity':'1', 'margin-top':'150px'}, 700);
 
-  setTimeout(function() {
-      $('.test-go-moment-container').animate({'opacity':'1', 'margin-top':'65px'}, 500);
-  }, 1700);
-});
+      setTimeout(function() {
+          $('.test-go-moment-container').animate({'opacity':'1', 'margin-top':'65px'}, 500);
+      }, 1700);
+    });
 
-$("#test-go-moment-submit").click(function(){
+      $("#test-go-moment-submit").click(function(){
 
-  if ($('#test-go-moment-input').val() != "") {
+        if ($('#test-go-moment-input').val() != "") {
 
-    setTimeout(function(){
-      $('.test-confirmation-container').toggleClass('clicked');
-    },200);
-    $('.call-to-action').toggleClass('clicked');
-    $('#test-go-moment').animate({'margin-left':'-400px'}, 200);
+          setTimeout(function(){
+            $('.test-confirmation-container').toggleClass('clicked');
+          },200);
+          $('.call-to-action').toggleClass('clicked');
+          $('#test-go-moment').animate({'margin-left':'-400px'}, 200);
 
-  } else {
+        } else {
 
-    var inputBox = document.getElementById('test-go-moment-input');
-    inputBox.placeholder = "Please enter cell number!";
-    inputBox.style.borderColor = 'red';
+          var inputBox = document.getElementById('test-go-moment-input');
+          inputBox.placeholder = "Please enter cell number!";
+          inputBox.style.borderColor = 'red';
 
-  }
+        }
 
-});
+      });
 
-$("#test-go-moment-input").keydown(function(e){
-  var key = e.which;
+      $("#test-go-moment-input").keydown(function(e){
+        var key = e.which;
 
-  if(key == 13 && $('#test-go-moment-input').val() != "") {
+        if(key == 13) {
+          if($('#test-go-moment-input').val() != "") {
 
-    $('#test-go-moment-input').submit();
-      setTimeout(function(){
-      $('.test-confirmation-container').toggleClass('clicked');
-    },200);
-    $('.call-to-action').toggleClass('clicked');
-    $('#test-go-moment').animate({'margin-left':'-400px'}, 200);
+            testGo();
+            $('#test-go-moment-input').submit();
+              setTimeout(function(){
+              $('.test-confirmation-container').toggleClass('clicked');
+            },200);
+            $('.call-to-action').toggleClass('clicked');
+            $('#test-go-moment').animate({'margin-left':'-400px'}, 200);
 
-  } else {
+          } else {
 
-    var inputBox = document.getElementById('test-go-moment-input');
-    inputBox.placeholder = "Please enter cell number!";
-    inputBox.style.borderColor = 'red';
+            var inputBox = document.getElementById('test-go-moment-input');
+            inputBox.placeholder = "Please enter cell number!";
+            inputBox.style.borderColor = 'red';
 
-  }
-});
+          }
+        }
+      });
 
-$("#email-submit-button").click(function(){
+      $("#email-submit-button").click(function(){
 
-  if ($('#email-input').val() != "") {
+        if ($('#email-input').val() != "") {
 
-    $('#email-input').animate({'margin-left':'-1000px'}, 200);
-    $('#email-submit-button').animate({'margin-left':'-1200px'}, 200);
-    $('#email-call-action').animate({'margin-left':'-1000px'}, 200);
+          $('#email-input').animate({'margin-left':'-1000px'}, 200);
+          $('#email-submit-button').animate({'margin-left':'-1200px'}, 200);
+          $('#email-call-action').animate({'margin-left':'-1000px'}, 200);
 
-    setTimeout(function(){
-      $('.email-confirmation-container').toggleClass('clicked');
-    }, 300);
+          setTimeout(function(){
+            $('.email-confirmation-container').toggleClass('clicked');
+          }, 300);
 
-  } else {
+        } else {
 
-    var emailInput = document.getElementById('email-input');
-    emailInput.placeholder = "Please enter email!";
-    emailInput.style.borderColor = "red";
+          var emailInput = document.getElementById('email-input');
+          emailInput.placeholder = "Please enter email!";
+          emailInput.style.borderColor = "red";
 
-  }
+        }
 
-});
+      });
 
-$("#email-input").keydown(function(e){
-  var key = e.which;
-  if (key == 13 && $('#email-input').val() != "") {
+      $("#email-input").keydown(function(e){
+        var key = e.which;
+        if (key == 13) {
+          if ($('#email-input').val() != "") {
 
-    $("#email-input").submit();
+            $("#email-input").submit();
 
-    $('#email-input').animate({'margin-left':'-1000px'}, 200);
-    $('#email-submit-button').animate({'margin-left':'-1200px'}, 200);
-    $('#email-call-action').animate({'margin-left':'-1000px'}, 200);
+            $('#email-input').animate({'margin-left':'-1000px'}, 200);
+            $('#email-submit-button').animate({'margin-left':'-1200px'}, 200);
+            $('#email-call-action').animate({'margin-left':'-1000px'}, 200);
 
-    setTimeout(function(){
-      $('.email-confirmation-container').toggleClass('clicked');
-    }, 300);
+            setTimeout(function(){
+              $('.email-confirmation-container').toggleClass('clicked');
+            }, 300);
 
-  } else {
-    
-    var emailInput = document.getElementById('email-input');
-    emailInput.placeholder = "Please enter email!";
-    emailInput.style.borderColor = "red";
+          } else {
 
-  }
-});
+            var emailInput = document.getElementById('email-input');
+            emailInput.placeholder = "Please enter email!";
+            emailInput.style.borderColor = "red";
+          }
+        }
+      });
 
-$(".feature-container").hover(function(){
+      $(".feature-container").hover(function(){
 
-  $(this).children("div.feature-description").toggleClass("hovered");
-});
+        $(this).children("div.feature-description").toggleClass("hovered");
+      });
 
-function testGo() {
-  var guestNumber = document.getElementById('test-go-moment-input').value;
-  $.ajax({
-    method: 'POST',
-    url: 'https://revone-staging.herokuapp.com/app/guests/home_page',
-    data: "guest[mobile_number]=" + guestNumber + "&guest[name]=test&visit[hotel_id]=2",
-    success: function() {
-      console.log('success');
-      document.getElementById('test-go-moment-input').value="Thank You!"
-    },
-    failure: function() {
-      console.log('fail');
-    }
-  });
-}
+      function testGo() {
+        var guestNumber = document.getElementById('test-go-moment-input').value;
+        $.ajax({
+          method: 'POST',
+          url: 'https://revone-staging.herokuapp.com/app/guests/home_page',
+          data: "guest[mobile_number]=" + guestNumber + "&guest[name]=test&visit[hotel_id]=2",
+          success: function() {
+            console.log('success');
+            document.getElementById('test-go-moment-input').value="Thank You!"
+          },
+          failure: function() {
+            console.log('fail');
+          }
+        });
+      }
 
- $(document).ready(function(){
-  var cb = new Codebird;
-    cb.setConsumerKey(
-        "c24MYuRlBhQDtvtLeV29SIsg6", 
-        "GHw4g6Jtoir3LFXXjexTReMZGfvGhIvQ7Wkr6OYaJao09pay5X"
+     $(document).ready(function(){
+      var cb = new Codebird;
+        cb.setConsumerKey(
+            "c24MYuRlBhQDtvtLeV29SIsg6", 
+            "GHw4g6Jtoir3LFXXjexTReMZGfvGhIvQ7Wkr6OYaJao09pay5X"
+          );
+        cb.setToken(
+          "46941458-cisCoyQUA7ZVjONfoXIJrphUAYSmVQtBlMtsbWlRt", 
+          "4g7PmoBi7SIqM5bImGbyCK6qTwtYA6Q89r6qxCZ4EHN13"
+          );
+
+      var params = {
+        screen_name: "GoMoment"
+      };
+
+      cb.__call(
+        "statuses_userTimeline",
+        params,
+        function (reply) {
+            console.log(reply);
+            var tweetDiv1 = document.getElementById('recent-tweet1');
+            var tweetDiv2 = document.getElementById('recent-tweet2');
+            var tweetDiv3 = document.getElementById('recent-tweet3');
+            var tweetDiv4 = document.getElementById('recent-tweet4');
+            var tweetDiv5 = document.getElementById('recent-tweet5'); 
+            tweetDiv1.innerHTML = reply[0].text;
+            tweetDiv2.innerHTML = reply[1].text;
+            tweetDiv3.innerHTML = reply[2].text;
+            tweetDiv4.innerHTML = reply[3].text;
+            tweetDiv5.innerHTML = reply[4].text;
+        }
       );
-    cb.setToken(
-      "46941458-cisCoyQUA7ZVjONfoXIJrphUAYSmVQtBlMtsbWlRt", 
-      "4g7PmoBi7SIqM5bImGbyCK6qTwtYA6Q89r6qxCZ4EHN13"
-      );
+    });
 
-  var params = {
-    screen_name: "GoMoment"
-  };
+    $('#email1').keydown(function(e){
+      var key = e.which;
 
-  cb.__call(
-    "statuses_userTimeline",
-    params,
-    function (reply) {
-        console.log(reply);
-        var tweetDiv1 = document.getElementById('recent-tweet1');
-        var tweetDiv2 = document.getElementById('recent-tweet2');
-        var tweetDiv3 = document.getElementById('recent-tweet3');
-        var tweetDiv4 = document.getElementById('recent-tweet4');
-        var tweetDiv5 = document.getElementById('recent-tweet5'); 
-        tweetDiv1.innerHTML = reply[0].text;
-        tweetDiv2.innerHTML = reply[1].text;
-        tweetDiv3.innerHTML = reply[2].text;
-        tweetDiv4.innerHTML = reply[3].text;
-        tweetDiv5.innerHTML = reply[4].text;
-    }
-  );
-});
+      if(key == 13 && $('#name1').val() != "" && $('#email1').val() != "") {
+        $('#close1').click();
+      }
+    });
+
+    $('#email2').keydown(function(e){
+      var key = e.which;
+
+      if(key == 13 && $('#name1').val() != "" && $('#email1').val() != "") {
+        $('#close2').click();
+      }
+    });
     </script>
 
     <style>
